--- a/index.html
+++ b/index.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>University Laboratory School and College</title>
-    <!-- Main Stylesheet -->
+    <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 </head>
 <body>
 
-    <!-- Navbar Placeholder: The navbar will be loaded here by include-navbar.js -->
     <div id="navbar-placeholder"></div>
 
-    <!-- Main Content Area -->
     <main class="container">
         <div class="main-layout">
-            <!-- Primary Content Column -->
             <div class="content-primary">
-                <!-- Image Slider Section -->
                 <section class="slider-section" id="image-slider">
                     <div class="slider-wrapper">
                         <div class="slide active"><img src="https://images.unsplash.com/photo-1562774053-701939374585?q=80&w=2000&auto=format&fit=crop" alt="University Campus"></div>
@@ -25,20 +22,18 @@
                         <div class="slide"><img src="https://images.unsplash.com/photo-1541339907198-e08756dedf3f?q=80&w=2000&auto=format&fit=crop" alt="University Building Hallway"></div>
                     </div>
                     <div class="slider-nav">
-                        <button class="slider-btn prev" aria-label="Previous Slide">&lt;</button>
-                        <button class="slider-btn next" aria-label="Next Slide">&gt;</button>
+                        <button class="slider-btn prev" aria-label="Previous Slide"><i class="fas fa-chevron-left"></i></button>
+                        <button class="slider-btn next" aria-label="Next Slide"><i class="fas fa-chevron-right"></i></button>
                     </div>
                 </section>
 
-                <!-- About the School Section -->
                 <section class="card">
                     <h2 class="card-title">এক নজরে স্কুল পরিচিতি</h2>
                     <p class="card-body-text">
-                        ইউনিভার্সিটি ল্যাবরেটরি স্কুল এন্ড কলেজ ঢাকা বিশ্ববিদ্যালয়ের অর্থায়নে শিক্ষা ও গবেষণাইনস্টিটিউট কর্তৃক পরিচালিত একটি বিশেষ ধরনের শিক্ষা প্রতিষ্ঠান। ১৯৬৪ সালের মার্চ মাসেMrs. Gunning নামে একজন আমেরিকান শিক্ষকের পরিচালনায় এ স্কুলের পথ চলা। ১৯৬৫ সালেরএপ্রিল মাসে তা কে.জি থেকে পঞ্চম শ্রেণিতে উন্নীত হয়ে একটি প্রাথমিক বিদ্যালয়ে পরিণত হয়। ১৯৭১সালে প্রথম বারের মতো শিক্ষার্থীরা এস.এস.সি পরীক্ষায় অবর্তীণ হয়। অতঃপর ১৯৭৫ সালেরজুলাই মাস থেকে এ প্রতিষ্ঠানে কলেজ শাখার যাত্রা সূচিত হয়। ২০১১ সাল থেকে ইংরেজি ভার্সনেশিক্ষাদান শুরু হয়। ছাত্র, শিক্ষক, অভিভাবক, আই.ই.আর এবংঢাকা বিশ্ববিদ্যালয় কর্তৃপক্ষের সম্মিলিত প্রচেষ্টায় এই শিক্ষা প্রতিষ্ঠানটি ঢাকা শহরের একটিঅন্যতম শিক্ষা প্রতিষ্ঠান হিসেবে স্বীকৃতি লাভ করেছে।
+                        ইউনিভার্সিটি ল্যাবরেটরি স্কুল এন্ড কলেজ ঢাকা বিশ্ববিদ্যালয়ের অর্থায়নে শিক্ষা ও গবেষণা ইনস্টিটিউট কর্তৃক পরিচালিত একটি বিশেষ ধরনের শিক্ষা প্রতিষ্ঠান। ১৯৬৪ সালের মার্চ মাসে Mrs. Gunning নামে একজন আমেরিকান শিক্ষকের পরিচালনায় এ স্কুলের পথ চলা। ১৯৬৫ সালের এপ্রিল মাসে তা কে.জি থেকে পঞ্চম শ্রেণিতে উন্নীত হয়ে একটি প্রাথমিক বিদ্যালয়ে পরিণত হয়। ১৯৭১ সালে প্রথম বারের মতো শিক্ষার্থীরা এস.এস.সি পরীক্ষায় অবর্তীণ হয়। অতঃপর ১৯৭৫ সালের জুলাই মাস থেকে এ প্রতিষ্ঠানে কলেজ শাখার যাত্রা সূচিত হয়। ২০১১ সাল থেকে ইংরেজি ভার্সনে শিক্ষাদান শুরু হয়। ছাত্র, শিক্ষক, অভিভাবক, আই.ই.আর এবং ঢাকা বিশ্ববিদ্যালয় কর্তৃপক্ষের সম্মিলিত প্রচেষ্টায় এই শিক্ষা প্রতিষ্ঠানটি ঢাকা শহরের একটি অন্যতম শিক্ষা প্রতিষ্ঠান হিসেবে স্বীকৃতি লাভ করেছে।
                     </p>
                 </section>
 
-                <!-- Grid for Galleries, News, etc. -->
                 <div class="content-grid">
                     <article class="card grid-card">
                         <div class="card-image-container">
@@ -50,7 +45,7 @@
                              </div>
                         </div>
                         <h3 class="card-subtitle">ভিডিও গ্যালারি</h3>
-                        <a href="#" class="card-link">আরো দেখুন &rarr;</a>
+                        <a href="#" class="card-link">আরো দেখুন <i class="fas fa-arrow-right"></i></a>
                     </article>
 
                      <article class="card grid-card">
@@ -58,7 +53,7 @@
                              <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?q=80&w=1200&auto=format&fit=crop" alt="Events" class="card-image">
                         </div>
                         <h3 class="card-subtitle">ফটো গ্যালারি</h3>
-                        <a href="#" class="card-link">আরো দেখুন &rarr;</a>
+                        <a href="#" class="card-link">আরো দেখুন <i class="fas fa-arrow-right"></i></a>
                     </article>
 
                     <article class="card grid-card">
@@ -66,7 +61,7 @@
                             <img src="https://images.unsplash.com/photo-1571260899304-425eee4c7efc?q=80&w=1200&auto=format&fit=crop" alt="Trophy" class="card-image">
                         </div>
                         <h3 class="card-subtitle">আমাদের অর্জন</h3>
-                        <a href="#" class="card-link">আরো দেখুন &rarr;</a>
+                        <a href="#" class="card-link">আরো দেখুন <i class="fas fa-arrow-right"></i></a>
                     </article>
 
                     <article class="card grid-card">
@@ -74,16 +69,14 @@
                            <img src="https://images.unsplash.com/photo-1531058020387-3be344556be6?q=80&w=1200&auto=format&fit=crop" alt="Audience at an event" class="card-image">
                         </div>
                         <h3 class="card-subtitle">নিউজ এন্ড ইভেন্টস</h3>
-                        <a href="#" class="card-link">আরো দেখুন &rarr;</a>
+                        <a href="#" class="card-link">আরো দেখুন <i class="fas fa-arrow-right"></i></a>
                     </article>
                 </div>
             </div>
 
-            <!-- Sidebar Column -->
             <aside class="content-sidebar">
-                <!-- Messages Section -->
                 <div class="card">
-                    <h3 class="card-subtitle text-center">সম্মানিত ব্যক্তিবর্গের বাণী</h3>
+                    <h3 class="card-subtitle text-center">সম্মানিত ব্যক্তিবর্গ</h3>
                     <div class="dignitary">
                         <img src="images/Prof_Niaz_Ahmed_Khan.jpg" alt="অধ্যাপক নিয়াজ আহমদ খান" class="dignitary-img">
                         <div class="dignitary-info">
@@ -107,58 +100,59 @@
                     </div>
                 </div>
 
-                <!-- Online Admission -->
                 <div class="card card-admission">
                     <h3>অনলাইন ভর্তি</h3>
                     <p>ভর্তি কার্যক্রম সম্পর্কে জানতে ও আবেদন করতে ক্লিক করুন।</p>
                     <a href="https://ulscdu.eabedon.com/" target="_blank" class="btn-primary">আবেদন করুন</a>
                 </div>
 
-                <!-- Notice Board -->
                 <div class="card">
                      <h3 class="card-subtitle">নোটিশ বোর্ড</h3>
                      <div class="notice-list">
                          <a href="#" class="notice-item">
-                             <div class="notice-date"><span>05</span>Oct</div>
+                             <div class="notice-date">
+                                <span>05</span>Oct
+                             </div>
                              <p>টাইফয়েড টিকাদান ক্যাম্পেইন-২০২৫ সংক্রান্ত জরুরী বিজ্ঞপ্তি</p>
                          </a>
                          <a href="#" class="notice-item">
-                             <div class="notice-date"><span>25</span>Sep</div>
+                             <div class="notice-date">
+                                <span>25</span>Sep
+                             </div>
                              <p>অষ্টম শ্রেণির বোর্ড রেজিস্ট্রেশন খরচ বৃদ্ধি সংক্রান্ত বিজ্ঞপ্তি</p>
                          </a>
                           <a href="#" class="notice-item">
-                             <div class="notice-date"><span>23</span>Sep</div>
+                             <div class="notice-date">
+                                <span>23</span>Sep
+                             </div>
                              <p>ছুটির বিজ্ঞপ্তি</p>
                          </a>
                      </div>
                      <a href="#" class="card-link text-center">সকল নোটিশ দেখুন</a>
                 </div>
 
-                <!-- Facebook Page -->
-                 <div class="card">
+                <div class="card">
                      <h3 class="card-subtitle">ফেইসবুক পেজ</h3>
-                     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversity-Laboratory-School-and-College-1936776879763897&tabs=timeline&width=340&height=250&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="100%" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                     <div class="fb-page-container">
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversity-Laboratory-School-and-College-1936776879763897&tabs=timeline&width=340&height=250&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="100%" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                     </div>
                  </div>
 
-                 <!-- Visitor Counter -->
                  <div class="card">
                      <h3 class="card-subtitle">ভিজিটর কাউন্টার</h3>
                      <ul class="visitor-list">
-                         <li><i class="fas fa-users"></i> Today's Visitors: <span id="today-visitors">171</span></li>
-                         <li><i class="fas fa-globe"></i> Total Visitors: <span id="total-visitors">398828</span></li>
+                         <li><i class="fas fa-users"></i> আজকের ভিজিটর: <span id="today-visitors">171</span></li>
+                         <li><i class="fas fa-globe-asia"></i> মোট ভিজিটর: <span id="total-visitors">398828</span></li>
                      </ul>
                  </div>
             </aside>
         </div>
     </main>
 
-    <!-- Footer Placeholder: The footer will be loaded here by include-footer.js -->
     <div id="footer-placeholder"></div>
 
-    <!-- Scripts -->
     <script src="js/include-navbar.js"></script>
     <script src="js/include-footer.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
-
